homeworks/lesson-11/ng-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-php
  namespace: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-php
  template:
    metadata:
      labels:
        app: nginx-php
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-php-storage
              mountPath: /var/www/html
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
        - name: php-fpm
          image: php:fpm
          volumeMounts:
            - name: nginx-php-storage
              mountPath: /var/www/html
      volumes:
        - name: nginx-php-storage
          persistentVolumeClaim:
            claimName: nginx-php-pvc
        - name: nginx-config
          configMap:
            name: nginx-config
