homeworks/lesson-11/bb-svc.yaml
apiVersion: v1
kind: Service
metadata:
 name: bb-svc
 namespace: bb-namespace
 labels:
   run: bb-app
spec:
 ports:
 - protocol: TCP
   port: 80
   targetPort: 80
   nodePort: 30080
 type: NodePort  # Доступ через зовнішній порт вузла
 selector:
   run: bb-app
