homeworks/lesson-11/ng-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-php-service
  namespace: nginx
spec:
  selector:
    app: nginx-php
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
  type: NodePort
